# leia

./: .gitignore  .gitlab-ci.yml  .gitmodules  Allwclean  Allwmake  README.md
cases/: 2Dcontactline-periodic.parameter  2Dcontactline-vortex-oscillate.parameter  2Dcontactline-vortex.parameter  2Dcontactline.pvsm  3Dcontactline.parameter  3Dcontactline.pvsm  3Ddeformation-paraview-visualize.py  3Ddeformation.ipynb  3Ddeformation.parameter  3Ddeformation_0_init.sh  3Ddeformation_1_run_foamJob.sh  3Ddeformation_4case.pvsm  3Ddeformation_perturbed.ipynb  3Ddeformation_perturbed.parameter  3Ddeformation_perturbed_0_init.sh  3Ddeformation_perturbed_1_run_foamJob.sh  3Ddeformation_poly.ipynb  3Ddeformation_poly.parameter  3Ddeformation_poly_0_init.sh  3Ddeformation_poly_1_run_foamJob.sh  3Ddeformation_poly_setup.sh  3Ddeformation_refactor.parameter  3Ddeformation_tet.ipynb  3Ddeformation_tet.parameter  3Ddeformation_tet_0_init.sh  3Ddeformation_tet_1_run_foamJob.sh  3Drotation.ipynb  3Drotation.parameter  3Drotation_0_init.sh  3Drotation_1_run_foamJob.sh  3Drotation_perturbed.ipynb  3Drotation_perturbed.parameter  3Drotation_perturbed_0_init.sh  3Drotation_perturbed_1_run_foamJob.sh  3Drotation_perturbed_setup.sh  3Drotation_poly.ipynb  3Drotation_poly.parameter  (+58 more)
python-package/: apt-install-latex.sh  latex_pkgs.txt  latex_requirements.txt  pip-install.sh  setup.cfg
python-package/demo/: 3Dshear_variation.txt  3Dtranslation_gathered.csv  3Dtranslation_variation.txt  database_demo.ipynb  postprocess_3Ddeformation.sh  postprocess_3Drotation.sh  postprocess_3Dshear.sh  postprocess_3Dtranslation.sh  postprocess_all.sh
python-package/demo/oldscripts/: evaluate-study_3Ddeformation.sh  evaluate-study_3Drotation.sh  evaluate-study_3Dshear.sh  evaluate-study_3Dtranslation.sh
python-package/scripts/: add-csv-to-database.py  database_plot.py  foamIsCaseComplete.sh  postprocess-study.py  rsync-study.py  sort-csv.py  study_0_create.py  study_0_create_empty.py  study_1_init.py  study_2_run_foamJob.py  study_2_run_sbatch.py  study_3_postprocess.py
python-package/scripts/lowlevel/: add-csv-to-database.py  convergencerates.py  database_add-convergence.py  study_agglomerate-case-csv.py  study_agglomerate-database.py
python-package/scripts/plot/: plot-database.py  plot_database.py  plot_subdatabase_perturbed.py  plot_subdatabase_poly.py
python-package/scripts/tool/: database_add-column.py  database_concat.py  print_endTimes_studydir.sh  study_cases.py  study_print-endTimes.sh  study_print-latestTimes.sh  study_print-status.py  study_rsync.py
python-package/scripts/tools/: database_filter-from-file.py  database_filter.py  database_print-parameters.py  database_rm-convergence-columns.py  foamCaseStatus.py  foamLatestTime.sh  study_case-parameter.py  study_print-latestTime.py
python-package/src/boschresearch/: README.txt  dataAgglomeration.py  gather-study-data.py
python-package/src/leia/: __init__.py  csv.py  database.py  derived_properties.py  io.py  plot.py  studycsv.py  studydir.py
python-package/src/leia/convergence/: __init__.py  _config.py  _getvalue.py
(+459 files in other folders)
