[metadata]
name = leia
version = 0.0.1
description="Python scripts and library for the leia-OpenFOAM project",
long_description=file: README.md
long_description_content_type="text/markdown"
author='Julian Reitzel'
author_email='j.reitzel@outlook.de'
# python_requires = >=3.7

[options]
install_requires =
    numpy
    pandas
    matplotlib
    PyFoam
    pyyaml
scripts = 
    src/boschresearch/gather-study-data.py
    scripts/add-csv-to-database.py
    scripts/case-parameter.py
    scripts/convergencerates.py
    scripts/postprocess-study.py
    scripts/sort-csv.py
    scripts/add-column-to-database.py
    scripts/concat-databases.py
    scripts/rsync-study.py
    scripts/plot/plot_database.py
    scripts/plot/plot_subdatabase_perturbed.py
    scripts/plot/plot_subdatabase_poly.py

