[metadata]
name = leia
version = 0.0.1
description="Python scripts and library for the leia-OpenFOAM project",
long_description=file: README.md
long_description_content_type="text/markdown"
author='Julian Reitzel'
author_email='j.reitzel@outlook.de'
python_requires = >=3.9

[options]
install_requires =
    numpy
    pandas
    matplotlib
    PyFoam
    pyyaml
scripts = 
    scripts/database_plot.py
    scripts/study_0_create_empty.py
    scripts/study_1_init.py
    scripts/study_2_run_foamJob.py
    scripts/study_2_run_sbatch.py
    scripts/study_3_postprocess.py

    scripts/lowlevel/database_add-convergence.py
    scripts/lowlevel/study_agglomerate-database.py
    
    scripts/tools/database_add-column.py
    scripts/tools/database_filter.py
    scripts/tools/database_concat.py
    scripts/tools/database_sort.py
    scripts/tools/foamCaseStatus.py
    scripts/tools/foamLatestTime.sh
    scripts/tools/study_print-latestTime.py
    scripts/tools/study_print-status.py
    scripts/tools/study_case-parameter.py
    scripts/tools/study_cases.py
    scripts/tools/study_rsync.py

    
    



